# openbb_tdx

./: pyproject.toml
.trae/documents/: tdx_equity_search_plan.md
.trae/skills/openbb-data-provider/: SKILL.md
.trae/skills/openbb-data-provider/references/tdxquant/: get_stock_info.md  get_stock_list.md
.trae/specs/: equity_profile_spec.md
.trae/specs/tdx_equity_historical/: checklist.md  spec.md  tasks.md
.trae/specs/tdx_financial_statements/: checklist.md  spec.md  tasks.md
docs/: openbb_tdx.ipynb  tdxquant.ipynb
openbb_tdx/: __init__.py  provider.py  router.py
openbb_tdx/models/: __init__.py  balance_sheet.py  cash_flow.py  equity_dividends.py  equity_historical.py  equity_profile.py  equity_quote.py  equity_search.py  income_statement.py
openbb_tdx/utils/: financial_statement_mapping.py  helpers.py
specs/tdx_equity_dividends/: checklist.md  spec.md  tasks.md
specs/tdx_equity_search/: SPEC.md
tests/: conftest.py  test_balance_sheet.py  test_cash_flow.py  test_equity_dividends.py  test_equity_historical.py  test_equity_historical_script.py  test_equity_profile.py  test_equity_search.py  test_equity_search_script.py  test_income_statement.py  test_tdx_download.py
