[tool.poetry]
name = "openbb-tdx"
version = "0.1.23"
description = "TdxQuant data provider extension for OpenBB Platform"
authors = ["Super Quant <super.quant@example.com>"]
readme = "README.md"
packages = [{ include = "openbb_tdx" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
openbb = "4.6.0"
openbb-core = { version = "^1.5.8" }
mysharelib = "^1.0.5"
uvicorn = "^0.40.0"

[tool.poetry.group.dev.dependencies]
openbb-devtools = { version = "^1.5.4" }
ipykernel = "^6.30.1"
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
tdxquant = "openbb_tdx.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
tdxquant = "openbb_tdx.provider:provider"
