[tool.poetry]
name = "openbb-tdx"
version = "1.2.0"
description = "TdxQuant data provider extension for OpenBB Platform"
authors = ["Roger Ye <shugaoye@yahoo.com>"]
license = "AGPL-3.0-only"
readme = "README.md"
packages = [{ include = "openbb_tdx" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
openbb = "4.7.1"
openbb-core = { version = "^1.6.8" }
mysharelib = "^1.0.5"
uvicorn = "^0.40.0"

[tool.poetry.group.dev.dependencies]
openbb-devtools = { version = "^1.6.6" }
ipykernel = "^7.2.0"
pytest = "^9.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."openbb_core_extension"]
tdxquant = "openbb_tdx.router:router"

[tool.poetry.plugins."openbb_provider_extension"]
tdxquant = "openbb_tdx.provider:provider"
